[gd_scene load_steps=11 format=2]

[ext_resource path="res://levels/hud/hudListPlayers.gd" type="Script" id=1]
[ext_resource path="res://models/listPlayer/bgTestTmp.jpg" type="Texture" id=2]
[ext_resource path="res://levels/hud/hudListPlayers.tres" type="StyleBox" id=3]
[ext_resource path="res://levels/hud/assets/backgdListPlayers.png" type="Texture" id=4]
[ext_resource path="res://models/listPlayer/fibre-font.otf" type="DynamicFontData" id=5]
[ext_resource path="res://models/listPlayer/themes_sliderContainer.tres" type="Theme" id=6]
[ext_resource path="res://levels/commons/fonts/montserrat/Montserrat-SemiBold.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="listPlayers" type="MarginContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.831373 )
light_mask = 1048575
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 80
custom_constants/margin_top = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 80

[node name="Panel" type="Panel" parent="listPlayers"]
show_behind_parent = true
margin_left = 80.0
margin_top = 80.0
margin_right = 944.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="listPlayers/Panel"]
modulate = Color( 1, 1, 1, 0.54902 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="listPlayers/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="listPlayers/Panel/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 834.0
margin_bottom = 410.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="listPlayers/Panel/MarginContainer/VBoxContainer"]
margin_right = 804.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "PLAYER LIST"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="listPlayers/Panel/MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 804.0
margin_bottom = 50.0
size_flags_horizontal = 3
expand = true
stretch_mode = 6

[node name="playerContainer" type="ScrollContainer" parent="listPlayers/Panel/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 804.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )

[node name="marginPlayer" type="MarginContainer" parent="listPlayers/Panel/MarginContainer/VBoxContainer/playerContainer"]
margin_right = 804.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="playersList" type="VBoxContainer" parent="listPlayers/Panel/MarginContainer/VBoxContainer/playerContainer/marginPlayer"]
margin_left = 15.0
margin_top = 5.0
margin_right = 789.0
margin_bottom = 315.0
theme = SubResource( 3 )
custom_constants/separation = 10
